<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingCard">

    <ImageView
        android:id="@+id/frameImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/frame_1" />

    <TextView
        android:id="@+id/happyBirthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/frameImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent">


        <ImageButton
            android:id="@+id/previousImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_previous"
            android:background="@color/purple_700"
            android:layout_marginEnd="64dp"
            android:onClick="previousImage"
            android:contentDescription="@string/previeous_frame"
            />

        <ImageButton
            android:id="@+id/nextImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_media_next"
            android:background="@color/purple_700"
            android:onClick="nextImage"
            android:contentDescription="@string/next_frame"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>